docs/v3.8.0rc1/_sources/gallery/experiment/sphere/sphere_Qsca_vs_diameter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/sphere_Qsca_vs_diameter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_sphere_Qsca_vs_diameter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_sphere_Qsca_vs_diameter.py:


Sphere: Qsca vs diameter
========================

.. GENERATED FROM PYTHON SOURCE LINES 8-9

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 9-20

.. code-block:: Python

    import numpy as np
    from TypedUnit import ureg

    from PyMieSim.experiment.scatterer import Sphere
    from PyMieSim.experiment.source import Gaussian

    from PyMieSim.experiment import Setup
    from PyOptik import Material

    Material.print_available()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    +-----------------------+-----------------------+
    | Sellmeier Materials   | Tabulated Materials   |
    +=======================+=======================+
    | germanium             | test_tabulated_file   |
    +-----------------------+-----------------------+
    | polystyren            | nickel                |
    +-----------------------+-----------------------+
    | methane               | copper                |
    +-----------------------+-----------------------+
    | lithium_niobate       | example_tabulated     |
    +-----------------------+-----------------------+
    | crown                 | magnesium             |
    +-----------------------+-----------------------+
    | pvc                   | pva                   |
    +-----------------------+-----------------------+
    | propanol              | paladium              |
    +-----------------------+-----------------------+
    | BK7                   | zinc                  |
    +-----------------------+-----------------------+
    | soda_lime_glass       | sodium                |
    +-----------------------+-----------------------+
    | fused_silica          | silicon               |
    +-----------------------+-----------------------+
    | ethylene              | lead                  |
    +-----------------------+-----------------------+
    | ethane                | tantalum              |
    +-----------------------+-----------------------+
    | FK51A                 | titanium              |
    +-----------------------+-----------------------+
    | acetone               | silver                |
    +-----------------------+-----------------------+
    | methanol              | aluminium             |
    +-----------------------+-----------------------+
    | test_sellmeier_file   | tungsten              |
    +-----------------------+-----------------------+
    | ethanol               | bismuth               |
    +-----------------------+-----------------------+
    | polystyrene           | polyetylene           |
    +-----------------------+-----------------------+
    | argon                 | iron                  |
    +-----------------------+-----------------------+
    | BAK1                  | vanadium              |
    +-----------------------+-----------------------+
    | SF5                   | calcium               |
    +-----------------------+-----------------------+
    | polycarbonate         | gold                  |
    +-----------------------+-----------------------+
    | ZBLAN                 | rhodium               |
    +-----------------------+-----------------------+
    | cellulose             | chromium              |
    +-----------------------+-----------------------+
    | water                 |                       |
    +-----------------------+-----------------------+
    | SF10                  |                       |
    +-----------------------+-----------------------+
    | SF11                  |                       |
    +-----------------------+-----------------------+
    | acetylene             |                       |
    +-----------------------+-----------------------+
    | air                   |                       |
    +-----------------------+-----------------------+
    | flint                 |                       |
    +-----------------------+-----------------------+
    | LASF9                 |                       |
    +-----------------------+-----------------------+
    | example_sellmeier     |                       |
    +-----------------------+-----------------------+
    | glycerol              |                       |
    +-----------------------+-----------------------+
    | BAF10                 |                       |
    +-----------------------+-----------------------+




.. GENERATED FROM PYTHON SOURCE LINES 21-22

Defining the source to be employed.

.. GENERATED FROM PYTHON SOURCE LINES 22-36

.. code-block:: Python

    source = Gaussian(
        wavelength=[405, 810] * ureg.nanometer,
        polarization=0 * ureg.degree,
        optical_power=1e-3 * ureg.watt,
        NA=0.2 * ureg.AU,
    )

    scatterer = Sphere(
        diameter=np.linspace(10, 1000, 150) * ureg.nanometer,
        medium_property=[1.33, 1.34, 1.5] * ureg.RIU,
        property=Material.polystyren,
        source=source,
    )








.. GENERATED FROM PYTHON SOURCE LINES 37-38

Defining the experiment setup

.. GENERATED FROM PYTHON SOURCE LINES 38-43

.. code-block:: Python

    experiment = Setup(scatterer=scatterer, source=source)

    dataframe = experiment.get("Qsca", scale_unit=True)

    dataframe.plot(x="scatterer:diameter", show=True)



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_sphere_Qsca_vs_diameter_001.png
   :alt: sphere Qsca vs diameter
   :srcset: /gallery/experiment/sphere/images/sphx_glr_sphere_Qsca_vs_diameter_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.11.14/x64/lib/python3.11/site-packages/PyOptik/material/base_class.py:60: UserWarning: Wavelength range goes from 405 nanometer to 810 nanometer which is outside the allowable range of 436.79999999999995 nanometer to 1.052 micrometer µm. [Material: polystyren]
      warnings.warn(

    <Figure size 800x500 with 1 Axes>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.327 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_sphere_Qsca_vs_diameter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: sphere_Qsca_vs_diameter.ipynb <sphere_Qsca_vs_diameter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: sphere_Qsca_vs_diameter.py <sphere_Qsca_vs_diameter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: sphere_Qsca_vs_diameter.zip <sphere_Qsca_vs_diameter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
